...
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/create_task_textview" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="8dp"
        android:onClick="cancelPressed"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/create_task_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/create_task"
        app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
...
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/name_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_task_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/name_textview"
        app:layout_constraintTop_toBottomOf="@+id/name_textview" />

    <Button
        android:id="@+id/edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/due_time_textview"
        app:layout_constraintTop_toBottomOf="@+id/edit_time" />

    <EditText
        android:id="@+id/description_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_description_of_task"
...
        android:text="@string/priority"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/description_entry"
        app:layout_constraintTop_toBottomOf="@+id/description_entry" />

    <Spinner
        android:id="@+id/priority_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/priority_textview"
        app:layout_constraintTop_toBottomOf="@+id/priority_textview" />

    <TextView
...
