...
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasks_text">


        <HorizontalScrollView
            android:id="@+id/hscrll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/task_table"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="false"
                android:stretchColumns="*"></TableLayout>

        </HorizontalScrollView>


    </ScrollView>

    <Button
        android:id="@+id/add_task_button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="5dp"
        android:text="@string/add"
        android:onClick="toAddTaskActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasks_scrollview" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="5dp"
        android:text="@string/delete"
...
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/reminder"
        android:onClick="createReminder"
        app:layout_constraintBottom_toBottomOf="@+id/add_task_button"
        app:layout_constraintEnd_toStartOf="@+id/mark_complete_button"
        app:layout_constraintTop_toBottomOf="@+id/tasks_scrollview" />

    <Button
        android:id="@+id/mark_complete_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
...
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:orientation="vertical">-->

                <TableLayout
                    android:id="@+id/completed_table"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="false"
                    android:stretchColumns="*"></TableLayout>
            </LinearLayout>
        </HorizontalScrollView>
...
