...
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:orientation="vertical">-->

                <TableLayout
                    android:id="@+id/todo_table"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:stretchColumns="*"></TableLayout>
            </LinearLayout>
        </HorizontalScrollView>

...
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:onClick="markComplete"
        android:text="@string/complete"
        app:layout_constraintBottom_toBottomOf="@+id/todo_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_scrollview" />

    <Button
        android:id="@+id/todo_delete_button"
        android:layout_width="wrap_content"
...
        android:onClick="toAddTaskActivity"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_scrollview" />

    <Button
        android:id="@+id/todo_view_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:onClick="openViewDialog"
        android:text="@string/view"
...
